--- a/index.html
+++ b/index.html
@@ -1,13 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>my first wabesite</h1>
+    <section class="top-banner flexible-container">
+        <div class="half-width widthboder">
+            <h1>Stay Focused on</h1>
+            <h1 class="orange-color">My mission in 2022</h1>
+            <p>web development is an important part of may life,i want to reach my target by
+                overcoming all obstacles.I have chosen 2022 as my own.Hard work is the key to good luck,so i work hard
+            </p>
+            <a class="link-button" target="_blank" href="http://your_url_here.html"> Explore now</a>
+            <p>scroll down to explore more about us</p>
+        </div>
+        <div class="half-width">
+            <img src="images/person-1.png" width="50%" alt="">
+        </div>
+    </section>
+
+    <section class="Develop">
+        <h1>my mission in <span class="orange-color">2022</span></h1>
+
+        <div class="flexible-container">
+            <div class="experience-item">
+                <div class="half-width">
+                    <img src="images2/illustrator-1.png" width="60%" alt="">
+                </div>
+                <h1>Mission</h1>
+                <p>you have to earn a lot of money in life and get married,so be a web developer</p>
+            </div>
+
+            <div class="experience-item2">
+                <div class="half-width">
+                    <img src="images2/illustrator-2.png" width="60%" alt="">
+                </div>
+                <h1>vission</h1>
+                <p>i want to take myself to a unique height as a web developer in 2022</p>
+            </div>
+            <div class="experience-item3">
+                <div class="half-width">
+                    <img src="images2/illustrator-3.png" width="60%" alt="">
+                </div>
+                <h1>goals</h1>
+                <p>i want to take myself to a
+                    unique height as a web developer in 2022</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="top-banner flexible-container">
+        <div class="half-width">
+            <img src="images3/coding.png" width="50%" alt="">
+        </div>
+        <div class="half-width ">
+            <h1>Develop</h1>
+            <h1>without limits</h1>
+            <p>web development is an important part of may life,i want to reach my target by
+                overcoming all obstacles.I have chosen 2022 as my own.Hard work is the key to good luck,so i work hard
+            </p>
+            <a class="link-button" target="_blank" href="http://your_url_here.html"> Read the Documenation </a>
+        </div>
+    </section>
+    <section class="top-banner flexible-container">
+        <div class="half-width">
+            <h1>Know our </h1>
+            <h1>global community</h1>
+            <p>Because we were founded in the cooperative housing movement, a community-led approach has been central to
+                our work from the very start. Global Communities prioritizes nimble, evidence-based programs developed
+                in partnership with communities impacted by poverty, disasters and conflict.
+            </p>
+            <a class="link-button" target="_blank" href="http://your_url_here.html">Read the Documenation</a>
+        </div>
+        <div class="half-width">
+            <img src="images3/project.png" width="50%" alt="">
+        </div>
+    </section>
+
+    <section class="My mission in 2022">
+        <h1>Build <span class="orange-color">corona application</span></h1>
+    </section>
+    <section class="top-banner flexible-container">
+
+        <div class="half-width">
+            <img src="images3/app.png" width="50%" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Stay safe with</h1>
+            <h1>Go <span class="orange-color">corona</span></h1>
+            <p>On this website you can find information and guidance from WHO regarding the current outbreak of
+                coronavirus disease (COVID-19) that was first reported from Wuhan, China, on 31 December 2019. Please
+                visit this page for daily updates.
+
+
+            </p>
+            <a class="link-button" target="_blank" href="http://your_url_here.html"> App fetures</a>
+        </div>
+
+
+    </section>
+
+
+    <section>
+        <div class="footer">
+            <h2>Stay Focused</h2>
+            <p>web developer in </p>
+        </div>
+    </section>
 </body>
+
 </html>
